kubernetes/apps/immich/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      protocol: TCP
      targetPort: http
