kubernetes/apps/immich/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: podinfo
  namespace: immich
spec:
  ingressClassName: nginx
  rules:
  - host: preview.immich.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 9898
  tls:
  - hosts:
    - preview.immich.cloud
    secretName: preview-tls-web
